# Recorder

./: .gitignore  ANALYSIS_REPORT.md  AUDIO_VISUALIZER_ARCHITECTURE.md  AUDIO_VISUALIZER_DOC_INDEX.md  AUDIO_VISUALIZER_FINAL_SUMMARY.md  AUDIO_VISUALIZER_IMPLEMENTATION.md  AUDIO_VISUALIZER_INTEGRATION_GUIDE.md  AUDIO_VISUALIZER_QUICK_REFERENCE.md  CMakeLists.txt  CMakeLists.txt.user.b0a2762  DELIVERY_CHECKLIST.md  DOCUMENTATION_INDEX.md  MUXER_COMPARISON_SUMMARY.md  MUXER_IMPLEMENTATION_GUIDE.md  MUXER_OPTIMIZATION_ANALYSIS.md  MUXER_OPTIMIZATION_EXECUTIVE_SUMMARY.md  MUXER_QUICK_REFERENCE.md  PROJECT_COMPLETION_REPORT.md  README.en.md  README.md  TASK_COMPLETION_SUMMARY.md  ffplay音频音量控制分析.md  main.cpp  res.qrc
.cache/clangd/index/: abstracteventfactory.h.77A724905A457459.idx  attributes.h.9AD5BD744C3881F2.idx  avcodec.h.6C04F3CB34CBF664.idx  avconfig.h.6B48CAA736F18E9E.idx  avdevice.h.BAF7EECE79518898.idx  avfilter.h.D1A455067A8621D5.idx  avformat.h.ED58F6C25C8213BD.idx  avio.h.135B285FDE7085E0.idx  avutil.h.0C2219CA008CB9F8.idx  buffer.h.813C9104B727026A.idx  buffersink.h.54C22B4B10BE9E31.idx  buffersrc.h.A1A3CED838AC934B.idx  channel_layout.h.D6D8125B1D7845B7.idx  codec.h.49959AD308EEFCA6.idx  codec_desc.h.3D00B1B8E7241DA6.idx  codec_id.h.0E9EE524F090B781.idx  codec_par.h.EF3E602B38D29460.idx  common.h.FF8C101593DC67D8.idx  cpu.h.BF00271059D859D3.idx  defs.h.B7C427042EF40722.idx  demuxer.cpp.B0E3371A9063D4CA.idx  demuxer.h.1D07EB4FE67C05DD.idx  dict.h.D8F8692F566563A7.idx  error.h.F783573D3F86CC3C.idx  eventcategory.h.F31F9AF9E2D021B2.idx  eventfactory.cpp.FE031ED054C5C30B.idx  eventfactory.h.85C4A0B0EAFD9D02.idx  eventfactorymanager.cpp.E94382437193F85D.idx  eventfactorymanager.h.CE7B8A41DB04D5B1.idx  ffadecoder.cpp.616F9C68F7BF6EC1.idx  ffadecoder.h.BE5663979B0B093F.idx  ffadecoderthread.cpp.144EDBB3F2DC5759.idx  ffadecoderthread.h.E0706027F03AC3BD.idx  ffaencoder.cpp.38951B569964A93E.idx  ffaencoder.h.72E1BD091CB13013.idx  ffaencoderthread.cpp.5652B3447E7A7CCE.idx  ffaencoderthread.h.ED8F1D8702BF27BB.idx  ffafilter.cpp.C12A9958BE9C20F0.idx  ffafilter.h.64AFC0D0142FB5C3.idx  ffafilterthread.cpp.0F5BC4D99CBAADE6.idx  (+100 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.serena/: project.yml
.serena/logs/: indexing.txt
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
decoder/: CMakeLists.txt  ffadecoder.cpp  ffadecoder.h  ffvdecoder.cpp  ffvdecoder.h
demuxer/: CMakeLists.txt  demuxer.cpp  demuxer.h
encoder/: CMakeLists.txt  ffaencoder.cpp  ffaencoder.h  ffvencoder.cpp  ffvencoder.h
event/: CMakeLists.txt  abstracteventfactory.h  eventcategory.h  eventfactory.cpp  eventfactory.h  eventfactorymanager.cpp  eventfactorymanager.h  ffaudiosourcechangeevent.cpp  ffaudiosourcechangeevent.h  ffclosesourceevent.cpp  ffclosesourceevent.h  ffevent.cpp  ffevent.h  ffeventloop.cpp  ffeventloop.h  ffopensourceevent.cpp  ffopensourceevent.h  ffpauseevent.cpp  ffpauseevent.h  ffprocessevent.cpp  ffprocessevent.h  ffsourcechangeevent.cpp  ffsourcechangeevent.h
filter/: CMakeLists.txt  ffafilter.cpp  ffafilter.h  ffvfilter.cpp  ffvfilter.h
muxer/: CMakeLists.txt  ffmuxer.cpp  ffmuxer.h
opengl/: CMakeLists.txt  ffglitem.cpp  ffglitem.h  ffglrenderer.cpp  ffglrenderer.cpp.tmp.34204.1767509184452  ffglrenderer.h
qml/: AudioIndicator.qml  AudioVisualizer.qml  CMakeLists.txt  Main.qml  OptionsArea.qml  PanelBackground.qml  RecordButton.qml  SourceSelectButton.qml  TimeDisplay.qml  VerticalSeparator.qml  cuttingpage.qml  settinglist.qml  settingpage.qml
queue/: CMakeLists.txt  ffaframequeue.cpp  ffaframequeue.h  ffapacketqueue.cpp  ffapacketqueue.h  ffboundedqueue.cpp  ffboundedqueue.h  ffeventqueue.cpp  ffeventqueue.h  ffpacket.h  ffvframequeue.cpp  ffvframequeue.h  ffvpacketqueue.cpp  ffvpacketqueue.h
recorder/: CMakeLists.txt  ffaudiosampler.cpp  ffaudiosampler.h  ffrecoder.cpp  ffrecoder_p.cpp  ffrecorder.h  ffrecorder_p.h
render/: CMakeLists.txt  ffarender.cpp  ffarender.h
resampler/: CMakeLists.txt  ffaresampler.cpp  ffaresampler.h  ffvresampler.cpp  ffvresampler.h
thread/: CMakeLists.txt  ffadecoderthread.cpp  ffadecoderthread.h  ffaencoderthread.cpp  ffaencoderthread.h  ffafilterthread.cpp  ffafilterthread.h  ffamuxerthread.cpp  ffamuxerthread.h  ffdemuxerthread.cpp  ffdemuxerthread.h  ffmuxerthread.cpp  ffmuxerthread.h  ffthread.cpp  ffthread.h  ffthreadpool.cpp  ffthreadpool.h  ffvdecoderthread.cpp  ffvdecoderthread.h  ffvencoderthread.cpp  ffvencoderthread.h  ffvfilterthread.cpp  ffvfilterthread.h  ffvmuxerthread.cpp  ffvmuxerthread.h
timer/: CMakeLists.txt  fftimer.cpp  fftimer.h
